# ROSBOT

./: CMakeLists.txt  README.md  package.xml
config/: ball_tracker_params_robot.yaml  controllers.yaml  drive_bot.rviz  joystick.yaml  mapper_params_online_async.yaml  view.rviz  view_bot.rviz
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: ball_tracker.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
